Actually fix underline issue
This seems like a bug in Safari, where if at any point the hover rule and the data-attribute rule
overlapped, it would get "stuck" in a competing hover state where it rendered both colors,
even when the element was no longer being hovered over.

Using :not(:hover) did not work either, for some reason.
The only solution I found was using the selector :hover:not([data-attr])

--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -15,22 +15,18 @@
   list-style: none;
   justify-content: space-between;
 
-  & li[data-active="true"] a {
+  // NOTE: underline selector requirements are very specific
+  // due to issues with Safari rendering.
+  & li[data-active="true"] {
     color: var(--c-accent3);
-  
-    @include t.nice_underline;
+
+    @include t.nice_underline();
   }
 
-  & li a:hover {
+  & li:hover:not([data-active="true"]) {
     color: var(--c-highlight);
 
-    @include t.nice_underline;
-
-    // `transition` causes bug in Safari where underline is rendered incorrectly
-    // It doesn't look right anyway since the underline appears before color transition,
-    // So commenting out until I find a more attractive solution.
-
-    // transition: color ease 0.2s;
+    @include t.nice_underline();
   }
 }
 
